Archive2/0b/60a40880968451/output
main.cpp: In function 'int main()':
main.cpp:266:25: error: aggregate 'TD<Hanoi<NullType, NullType, Stack<4, Stack<3, Stack<2, Stack<1, NullType> > > > > > rr' has incomplete type and cannot be defined
         TD<decltype(r)> rr;
                         ^
